<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstPageActivity"
    android:orientation="vertical"
    android:background="@drawable/img7"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/blue_10"
        android:textSize="50sp"
        android:layout_weight="2"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/avtar"
        />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:minLines="1"
            android:maxLength="10"
            android:textColor="@color/black"
            android:hint="@string/etPassword"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/tvForget"
            android:textColor="@color/blue_10"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue_10"
            android:hint="@string/btnLogin"
            android:padding="8dp"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/llReg"
            android:layout_marginTop="40dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvRegister"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tvReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvReg"
                android:textColor="@color/blue_10"
                android:textSize="17sp"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>