<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    android:background="@drawable/img7"
    android:gravity="center_horizontal"
    tools:context=".RegisterPageActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvReg"
    android:textSize="30sp"
    android:gravity="center"
    android:textColor="@color/blue_10"
    android:fontFamily="sans-serif-black"
    android:layout_weight="1"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/llRegi"
        android:padding="20dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/etName"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:hint="@string/etName"
            android:textColorHint="@color/black"
            android:inputType="text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/etEmail1"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:hint="@string/etEmail"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:id="@+id/etPhone"
            android:minLines="1"
            android:digits="1234567890"
            android:maxLength="10"
            android:hint="@string/etPhone"
            android:textColorHint="@color/black"
            android:inputType="phone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/etPassword1"
            android:minLines="1"
            android:maxLength="10"
            android:textColor="@color/black"
            android:hint="@string/etPassword"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:id="@+id/etConfirm"
            android:textColor="@color/black"
            android:minLines="1"
            android:maxLength="10"
            android:hint="@string/etConfirm"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReg"
            android:textSize="15sp"
            android:hint="@string/btnReg"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/blue_10"
            android:padding="17dp"
            />



    </LinearLayout>
</LinearLayout>