<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    android:background="@drawable/img7"
    android:gravity="center_horizontal"
    tools:context=".ForgetPasswordActivity"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvFor"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/blue_10"
        android:fontFamily="sans-serif-black"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/llForget"
        android:padding="20dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/etEmail2"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:hint="@string/etEmail"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOtp"
            android:textSize="15sp"
            android:hint="@string/btnOtp"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/blue_10"
            android:padding="17dp"
            />
    </LinearLayout>

</LinearLayout>