<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/img7"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etContent"
        android:textSize="30sp"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:gravity="center"
    android:id="@+id/tvEmail3"
    android:textSize="20sp"
    android:padding="20dp"
    android:textColor="@color/blue_10"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:maxLength="1"
            android:paddingHorizontal="10dp"
            android:digits="1234567890"
            android:hint="@string/Star"
            android:imeOptions="actionNext"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:paddingHorizontal="10dp"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:maxLength="1"
            android:hint="@string/Star"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:digits="1234567890"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="1"
            android:maxLength="1"
            android:imeOptions="actionNext"
            android:paddingHorizontal="10dp"
            android:hint="@string/Star"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:digits="1234567890"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:maxLength="1"
            android:imeOptions="actionDone"
            android:digits="1234567890"
            android:hint="@string/Star"
            android:textColorHint="@color/black"
            android:paddingHorizontal="10dp"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChange"
        android:backgroundTint="@color/blue_10"
        android:hint="@string/btnChange"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        />

</LinearLayout>